[package]
name = "gtkdownloadbar"
version = "0.2.0"
authors = ["cht <3237126351@qq.com>"]
description = "A lib to download for sparkstore"
documentation = "https://github.com/chen244/gtk-download-bar"
homepage = "https://github.com/chen244/gtk-download-bar"
repository = "https://github.com/chen244/gtk-download-bar"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download","gtk"]
categories = ["web-programming::http-client","network-programming"]
license = "MIT"
edition = "2018"

[dependencies]
indicatif = "0.15.0"
console = "0.13.0"
ftp = "3.0.1"
threadpool = "1.8.1"
# failure = { version = "0.1.8", features = [] }
url = "2.2.2"
reqwest = {version = "0.10.8", features = ["blocking"]}
anyhow = "1.0.43"
gtk = "0.14.0"
glib = "0.14.2"
gio = "0.14.0"
[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
